// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-card t-card--bordered t-card--shadow-hover"
      style="width: 400px;"
    >
      <div
        class="t-card__header"
      >
        <div
          class="t-card__header-wrapper"
        >
          <div>
            <span
              class="t-card__title"
            >
              标题
            </span>
          </div>
        </div>
        <div
          class="t-card__actions"
        >
          操作
        </div>
      </div>
      <div
        class="t-card__body"
      >
        仅有内容区域的卡片形式。卡片内容区域可以是文字、图片、表单、表格等形式信息内容。可使用大中小不同的卡片尺寸，按业务需求进行呈现。
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`bordered.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-card t-card--bordered"
      style="width: 400px;"
    >
      <div
        class="t-card__body"
      >
        仅有内容区域的卡片形式。卡片内容区域可以是文字、图片、表单、表格等形式信息内容。可使用大中小不同的卡片尺寸，按业务需求进行呈现。
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`bordered-none.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block"
    style="padding: 16px; background-color: rgb(243, 243, 243);"
  >
    <div
      class="t-card t-card--shadow-hover"
      style="width: 400px;"
    >
      <div
        class="t-card__header"
      >
        <div
          class="t-card__header-wrapper"
        >
          <div>
            <span
              class="t-card__title"
            >
              标题
            </span>
          </div>
        </div>
        <div
          class="t-card__actions"
        >
          <a
            style="cursor: pointer;"
          >
            操作
          </a>
        </div>
      </div>
      <div
        class="t-card__body"
      >
        仅有内容区域的卡片形式。卡片内容区域可以是文字、图片、表单、表格等形式信息内容。可使用大中小不同的卡片尺寸，按业务需求进行呈现。
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`footer-content.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-card t-card--bordered"
      style="width: 400px;"
    >
      <div
        class="t-card__cover"
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/source/card-demo.png"
        />
      </div>
      <div
        class="t-card__footer"
      >
        <div
          class="t-card__footer-wrapper"
        >
          <div
            class="t-comment"
          >
            <div
              class="t-comment__inner"
            >
              <div
                class="t-comment__avatar"
              >
                <img
                  alt=""
                  class="t-comment__avatar-image"
                  src="https://tdesign.gtimg.com/site/avatar-boy.jpg"
                />
              </div>
              <div
                class="t-comment__content"
              >
                <div
                  class="t-comment__author"
                >
                  <span
                    class="t-comment__name"
                  >
                    标题
                  </span>
                </div>
                <div
                  class="t-comment__detail"
                >
                  卡片内容
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`footer-content-actions.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-card t-card--bordered"
      style="width: 400px;"
    >
      <div
        class="t-card__cover"
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/source/card-demo.png"
        />
      </div>
      <div
        class="t-card__footer"
      >
        <div
          class="t-card__footer-wrapper"
        >
          <div
            class="t-comment"
          >
            <div
              class="t-comment__inner"
            >
              <div
                class="t-comment__avatar"
              >
                <img
                  alt=""
                  class="t-comment__avatar-image"
                  src="https://tdesign.gtimg.com/site/avatar-boy.jpg"
                />
              </div>
              <div
                class="t-comment__content"
              >
                <div
                  class="t-comment__author"
                >
                  <span
                    class="t-comment__name"
                  >
                    标题
                  </span>
                </div>
                <div
                  class="t-comment__detail"
                >
                  卡片内容
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="t-card__actions"
        >
          <div
            class="t-popup__reference"
          >
            <button
              class="t-button t-button--theme-default t-button--variant-text t-button--shape-square"
              type="button"
            >
              <span
                class="t-button__text"
              >
                <svg
                  class="t-icon t-icon-more"
                >
                  <use
                    xlink:href="#t-icon-more"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`header.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-card t-card--bordered t-card--shadow-hover"
      style="width: 400px;"
    >
      <div
        class="t-card__header"
      >
        <div
          class="t-card__header-wrapper"
        >
          <div>
            <span
              class="t-card__title"
            >
              标题
            </span>
          </div>
        </div>
        <div
          class="t-card__actions"
        >
          <a
            style="cursor: pointer;"
          >
            操作
          </a>
        </div>
      </div>
      <div
        class="t-card__body"
      >
        卡片内容，以描述性为主，可以是文字、图片或图文组合的形式。按业务需求进行自定义组合。
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`header-all-props.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-card t-card--bordered t-card--shadow-hover"
      style="width: 400px;"
    >
      <div
        class="t-card__header"
      >
        <div
          class="t-card__header-wrapper"
        >
          <div>
            <span
              class="t-card__title"
            >
              标题
            </span>
            <span
              class="t-card__subtitle"
            >
              副标题
            </span>
            <p
              class="t-card__description"
            >
              描述
            </p>
          </div>
        </div>
        <div
          class="t-card__actions"
        >
          操作
        </div>
      </div>
      <div
        class="t-card__body"
      >
        卡片内容，以描述性为主，可以是文字、图片或图文组合的形式。按业务需求进行自定义组合。
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`header-bordered.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-card t-card--bordered"
      style="width: 400px;"
    >
      <div
        class="t-card__header t-card__title--bordered"
      >
        <div
          class="t-card__header-wrapper"
        >
          <div>
            <span
              class="t-card__title"
            >
              标题
            </span>
          </div>
        </div>
        <div
          class="t-card__actions"
        >
          <a
            style="cursor: pointer;"
          >
            操作
          </a>
        </div>
      </div>
      <div
        class="t-card__body"
      >
        卡片内容，以描述性为主，可以是文字、图片或图文组合的形式。按业务需求进行自定义组合。
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`header-description.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-card t-card--bordered t-card--shadow-hover"
      style="width: 400px;"
    >
      <div
        class="t-card__header"
      >
        <div
          class="t-card__header-wrapper"
        >
          <div>
            <span
              class="t-card__title"
            >
              标题
            </span>
            <p
              class="t-card__description"
            >
              描述
            </p>
          </div>
        </div>
        <div
          class="t-card__actions"
        >
          操作
        </div>
      </div>
      <div
        class="t-card__body"
      >
        卡片内容，以描述性为主，可以是文字、图片或图文组合的形式。按业务需求进行自定义组合。
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`header-footer-actions.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-card t-card--bordered"
      style="width: 400px;"
    >
      <div
        class="t-card__header"
      >
        <div
          class="t-card__header-wrapper"
        >
          <div
            class="t-card__avatar"
          >
            <div
              class="t-avatar t-avatar--circle"
              style="width: 40px; height: 40px; font-size: 20px;"
            >
              <img
                src="https://tdesign.gtimg.com/site/avatar-boy.jpg"
                style="width: 40px; height: 40px;"
              />
            </div>
          </div>
          <div>
            <span
              class="t-card__title"
            >
              标题
            </span>
            <p
              class="t-card__description"
            >
              卡片内容
            </p>
          </div>
        </div>
        <div
          class="t-card__actions"
        >
          <div
            class="t-popup__reference"
          >
            <button
              class="t-button t-button--theme-default t-button--variant-text t-button--shape-square"
              type="button"
            >
              <span
                class="t-button__text"
              >
                <svg
                  class="t-icon t-icon-more"
                >
                  <use
                    xlink:href="#t-icon-more"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="t-card__cover"
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/source/card-demo.png"
        />
      </div>
      <div
        class="t-card__footer"
      >
        <div
          class="t-card__footer-wrapper"
        >
          <div
            class="t-row t-row--center t-row--middle"
            style="margin-left: 0px; margin-right: 0px;"
          >
            <div
              align="middle"
              class="t-col"
              gutter="0"
              style="padding-left: 0px; padding-right: 0px; flex-basis: auto;"
            >
              <button
                class="t-button t-button--theme-default t-button--variant-text t-size-full-width"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  <svg
                    class="t-icon t-icon-thumb-up"
                    fill="none"
                    height="1em"
                    style="font-size: 24px;"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M10 6h3.22a1 1 0 01.97 1.24l-1.5 6a1 1 0 01-.97.76H3a1 1 0 01-1-1V8a1 1 0 011-1h2l2-5h2a1 1 0 011 1v3zM6 7.2V13h5.72l1.5-6H9V3H7.68L6 7.2zM5 8H3v5h2V8z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="t-divider t-divider--vertical"
            />
            <div
              align="middle"
              class="t-col"
              gutter="0"
              style="padding-left: 0px; padding-right: 0px; flex-basis: auto;"
            >
              <button
                class="t-button t-button--theme-default t-button--variant-text t-size-full-width"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  <svg
                    class="t-icon t-icon-chat"
                    fill="none"
                    height="1em"
                    style="font-size: 24px;"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M4.64 10.5H13V4H3v7.87l1.64-1.37zm-2.15 3.09a.3.3 0 01-.49-.23V4a1 1 0 011-1h10a1 1 0 011 1v6.5a1 1 0 01-1 1H5l-2.5 2.09z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="t-divider t-divider--vertical"
            />
            <div
              align="middle"
              class="t-col"
              gutter="0"
              style="padding-left: 0px; padding-right: 0px; flex-basis: auto;"
            >
              <button
                class="t-button t-button--theme-default t-button--variant-text t-size-full-width"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  <svg
                    class="t-icon t-icon-share"
                    fill="none"
                    height="1em"
                    style="font-size: 24px;"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M9.93 5.36a2.31 2.31 0 004.02-1.57 2.32 2.32 0 10-4.52.7L6.07 6.45a2.31 2.31 0 00-4.02 1.58A2.32 2.32 0 006.07 9.6l3.36 1.96a2.32 2.32 0 10.5-.87L6.57 8.73a2.32 2.32 0 000-1.41l3.36-1.96zm1.7-2.9a1.32 1.32 0 110 2.64 1.32 1.32 0 010-2.63zM5.5 7.35a.5.5 0 00.03.05 1.31 1.31 0 01-.03 1.33 1.32 1.32 0 110-1.38zm4.83 4.93c0-.22.05-.43.14-.6a.52.52 0 00.07-.13 1.32 1.32 0 11-.21.73z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`header-subtitle.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-card t-card--bordered t-card--shadow-hover"
      style="width: 400px;"
    >
      <div
        class="t-card__header"
      >
        <div
          class="t-card__header-wrapper"
        >
          <div>
            <span
              class="t-card__title"
            >
              标题
            </span>
            <span
              class="t-card__subtitle"
            >
              副标题
            </span>
          </div>
        </div>
        <div
          class="t-card__actions"
        >
          操作
        </div>
      </div>
      <div
        class="t-card__body"
      >
        卡片内容，以描述性为主，可以是文字、图片或图文组合的形式。按业务需求进行自定义组合。
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`header-subtitle-footer-actions.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-card t-card--bordered"
      style="width: 400px;"
    >
      <div
        class="t-card__header"
      >
        <div
          class="t-card__header-wrapper"
        >
          <div>
            <span
              class="t-card__title"
            >
              标题
            </span>
            <span
              class="t-card__subtitle"
            >
              副标题
            </span>
          </div>
        </div>
        <div
          class="t-card__actions"
        >
          <div
            class="t-popup__reference"
          >
            <button
              class="t-button t-button--theme-default t-button--variant-text t-button--shape-square"
              type="button"
            >
              <span
                class="t-button__text"
              >
                <svg
                  class="t-icon t-icon-more"
                >
                  <use
                    xlink:href="#t-icon-more"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="t-card__cover"
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/source/card-demo.png"
        />
      </div>
      <div
        class="t-card__footer"
      >
        <div
          class="t-card__footer-wrapper"
        >
          <div
            class="t-row t-row--center t-row--middle"
            style="margin-left: 0px; margin-right: 0px;"
          >
            <div
              align="middle"
              class="t-col"
              gutter="0"
              style="padding-left: 0px; padding-right: 0px; flex-basis: auto;"
            >
              <button
                class="t-button t-button--theme-default t-button--variant-text t-size-full-width"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  <svg
                    class="t-icon t-icon-thumb-up"
                    fill="none"
                    height="1em"
                    style="font-size: 24px;"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M10 6h3.22a1 1 0 01.97 1.24l-1.5 6a1 1 0 01-.97.76H3a1 1 0 01-1-1V8a1 1 0 011-1h2l2-5h2a1 1 0 011 1v3zM6 7.2V13h5.72l1.5-6H9V3H7.68L6 7.2zM5 8H3v5h2V8z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="t-divider t-divider--vertical"
            />
            <div
              align="middle"
              class="t-col"
              gutter="0"
              style="padding-left: 0px; padding-right: 0px; flex-basis: auto;"
            >
              <button
                class="t-button t-button--theme-default t-button--variant-text t-size-full-width"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  <svg
                    class="t-icon t-icon-chat"
                    fill="none"
                    height="1em"
                    style="font-size: 24px;"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M4.64 10.5H13V4H3v7.87l1.64-1.37zm-2.15 3.09a.3.3 0 01-.49-.23V4a1 1 0 011-1h10a1 1 0 011 1v6.5a1 1 0 01-1 1H5l-2.5 2.09z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="t-divider t-divider--vertical"
            />
            <div
              align="middle"
              class="t-col"
              gutter="0"
              style="padding-left: 0px; padding-right: 0px; flex-basis: auto;"
            >
              <button
                class="t-button t-button--theme-default t-button--variant-text t-size-full-width"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  <svg
                    class="t-icon t-icon-share"
                    fill="none"
                    height="1em"
                    style="font-size: 24px;"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M9.93 5.36a2.31 2.31 0 004.02-1.57 2.32 2.32 0 10-4.52.7L6.07 6.45a2.31 2.31 0 00-4.02 1.58A2.32 2.32 0 006.07 9.6l3.36 1.96a2.32 2.32 0 10.5-.87L6.57 8.73a2.32 2.32 0 000-1.41l3.36-1.96zm1.7-2.9a1.32 1.32 0 110 2.64 1.32 1.32 0 010-2.63zM5.5 7.35a.5.5 0 00.03.05 1.31 1.31 0 01-.03 1.33 1.32 1.32 0 110-1.38zm4.83 4.93c0-.22.05-.43.14-.6a.52.52 0 00.07-.13 1.32 1.32 0 11-.21.73z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
